[gd_scene load_steps=5 format=3 uid="uid://dilg0e5h66qys"]

[ext_resource type="Script" path="res://src/elements/hud/inventory_menu/item_details_menu/item_details_menu.gd" id="1_jvtpm"]
[ext_resource type="Texture2D" uid="uid://dl0fyacx1bv8i" path="res://asset/items/currencies/amethyst.png" id="2_w28rc"]
[ext_resource type="Texture2D" uid="uid://pi5nl50km3qy" path="res://asset/items/items/32x32_PixelArmor_Premium_2.png" id="2_yq722"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jikcy"]
atlas = ExtResource("2_yq722")
region = Rect2(291, 43, 25, 15)

[node name="ItemDetailsMenu" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2
script = ExtResource("1_jvtpm")

[node name="ItemsDetailVBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2

[node name="ItemNameLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemTexture" type="TextureRect" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_jikcy")
stretch_mode = 5

[node name="ItemRarityLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rarity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemLevelLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsVBoxContainer" type="VBoxContainer" parent="ItemsDetailVBoxContainer"]
layout_mode = 2

[node name="MainStatLabel" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main"

[node name="AdditionnalStat1Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat1Label"

[node name="AdditionnalStat2Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat2Label"

[node name="AdditionnalStat3Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat3Label"

[node name="AdditionnalStat4Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat4Label"

[node name="LevelUpButton" type="Button" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Up
"

[node name="LevelUpBoxContainer" type="HBoxContainer" parent="ItemsDetailVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelUpCostLabel" type="Label" parent="ItemsDetailVBoxContainer/LevelUpBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmethystTextureRect" type="TextureRect" parent="ItemsDetailVBoxContainer/LevelUpBoxContainer"]
layout_mode = 2
texture = ExtResource("2_w28rc")
expand_mode = 3

[node name="SalvageButton" type="Button" parent="ItemsDetailVBoxContainer"]
layout_mode = 2
text = "Salvage"

[node name="SalvageBoxContainer" type="HBoxContainer" parent="ItemsDetailVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SalvagePriceLabel" type="Label" parent="ItemsDetailVBoxContainer/SalvageBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Price"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmethystTextureRect" type="TextureRect" parent="ItemsDetailVBoxContainer/SalvageBoxContainer"]
layout_mode = 2
texture = ExtResource("2_w28rc")
expand_mode = 3

[node name="EquipButton" type="Button" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip"

[node name="NoItemSelectedLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No item selected"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ItemsDetailVBoxContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
[connection signal="pressed" from="ItemsDetailVBoxContainer/SalvageButton" to="." method="_on_salvage_button_pressed"]
[connection signal="pressed" from="ItemsDetailVBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
